syntax = "proto3";

option go_package = "github.com/JakubDaleki/transfer-app/shared-dependencies/grpc";

package grpc;

service QueryService {
  rpc GetBalance (BalanceRequest) returns (BalanceReponse) {}
  // rpc MakeTransfer (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message BalanceRequest {
  string username = 1;
}

// The response message containing the balance
message BalanceReponse {
  string username = 1;
  double balance = 2;
}
